# ZCode-Shim

./: .gitignore  README.md  install.sh  pyproject.toml
scripts/: codex-login.py  doctor.py
src/zcode_openai_sub_proxy/: __init__.py  __main__.py  config.py  local_store.py  server.py  translate.py  upstream.py
src/zcode_openai_sub_proxy/data/: auth.example.json  models.json
